<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerPage"
    android:layout_marginTop="15sp"
    android:layout_marginStart="15sp"
    android:layout_marginEnd="15sp">

    <TextView
        android:id="@+id/manage_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_title"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/manage_text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/manage_text_welcome"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_text_title" />

    <TextView
        android:id="@+id/manage_text_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Your Name"
        app:layout_constraintBottom_toBottomOf="@+id/manage_text_welcome"
        app:layout_constraintStart_toEndOf="@+id/manage_text_welcome"
        app:layout_constraintTop_toTopOf="@+id/manage_text_welcome" />

    <TextView
        android:id="@+id/manage_text_myShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/manage_text_myShop"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_text_welcome" />

    <TextView
        android:id="@+id/manage_text_shopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Shop Name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/manage_text_myShop"
        app:layout_constraintStart_toEndOf="@+id/manage_text_myShop"
        app:layout_constraintTop_toTopOf="@+id/manage_text_myShop" />


    <TextView
        android:id="@+id/manage_text_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/manage_text_address"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_text_myShop" />

    <LinearLayout
        android:id="@+id/manage_linearLayout_addressGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@+id/manage_text_address"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/manage_text_latitude" />

            <EditText
                android:id="@+id/manage_edit_X"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/manage_text_longitude" />

            <EditText
                android:id="@+id/manage_edit_Y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <Button
            android:id="@+id/manage_button_addAddress"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_button_address" />
    </LinearLayout>

    <Button
        android:id="@+id/manage_button_addItem"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/manage_button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_linearLayout_addressGroup" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="300sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manage_button_addItem"
        app:layout_constraintVertical_bias="0.84">

    </ListView>


</androidx.constraintlayout.widget.ConstraintLayout>