<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="15sp"
    android:layout_marginStart="15sp"
    android:layout_marginEnd="15sp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".SearchPage">

    <TextView
        android:id="@+id/search_text_IFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_text"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_editText"
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:ems="10"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:singleLine="true"/>

        <Button
            android:id="@+id/search_button_search"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="120sp"
            android:layout_height="60sp"
            android:layout_weight="1"
            android:layout_marginStart="15sp"
            android:text="@string/search_button_text"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/search_text_recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:textSize="24sp"
        android:text="@string/search_text2" />

    <ProgressBar
        android:id="@+id/search_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/search_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20sp"/>

</LinearLayout>
